src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Deadline__c</fullName>
        <label>Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dedication_Acknowledgement_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Acknowledgement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dedication_Honoree_Name__c</fullName>
        <label>Dedication Honoree Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Personal_Note__c</fullName>
        <label>Dedication Personal Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Address__c</fullName>
        <label>Dedication Recipient Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Email_Address__c</fullName>
        <description>email address for sending dedication acknowledgments to donors&apos; loved ones</description>
        <label>Dedication Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_First_Name__c</fullName>
        <label>Dedication Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Recipient_Last_Name__c</fullName>
        <label>Dedication Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedication_Type__c</fullName>
        <description>Used for NFG integration.</description>
        <label>Dedication Type</label>
        <picklist>
            <picklistValues>
                <fullName>in honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>on behalf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use in the UK - If the donor is a tax payer they can choose to have the donation Gift Aided so the government releases the amount of income tax that was already paid and gives it to the charity.</description>
        <label>Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Aided_Amount__c</fullName>
        <formula>IF( Gift_Aid__c ,  Amount  * 1.28205, Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Aided Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <description>Used for NFG integration.  Amount that was actually granted versus the donated amount which may less due to online processing fees.</description>
        <label>Grant Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Amount__c</fullName>
        <formula>Amount  *  Matching__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Close_Date__c</fullName>
        <label>Matching Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Status__c</fullName>
        <label>Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Posted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching__c</fullName>
        <label>Matching %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <formula>(Membership_Length__c*30.416) + Membership_Start_Date__c</formula>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Length__c</fullName>
        <label>Membership Length (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash/Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pledge__c</fullName>
        <description>Look up relationship for pledge payments</description>
        <label>Pledge</label>
        <referenceTo>Pledges__c</referenceTo>
        <relationshipLabel>Pledge Payments</relationshipLabel>
        <relationshipName>R00N70000001ay08EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <label>Program Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <label>Recurring Donation</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donation</relationshipLabel>
        <relationshipName>R00N70000001ay0EEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Deadline__c</fullName>
        <label>Reporting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount  +  Matching_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <description>Use this record type for standard donations</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <description>Use this record type for grant applications</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <description>Use this record type for major gift initiatives</description>
        <label>MajorGift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MatchingDonation</fullName>
        <active>true</active>
        <description>Use this record type for matching donations</description>
        <label>MatchingDonation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <description>Use this record type for memberships</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>PledgePayment</fullName>
        <active>true</active>
        <description>Use this record type for pledge payments on a pledge</description>
        <label>PledgePayment</label>
    </recordTypes>
</CustomObject>